# Cv_test

./: CMakeLists.txt  README.md  hog.cpp  positives.txt  sift
cascade/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
data/backgrounds/benches_and_chairs/: 155_5534.JPG:Zone.Identifier
include/: detection.h  utils.h
results/labels/: 35_0010_000001-box.txt  35_0010_000491-box.txt  35_0010_000868-box.txt  35_0010_001462-box.txt  35_0010_001853-box.txt  35_0030_000046-box.txt  35_0030_001009-box.txt  35_0038_002606-box.txt  35_0054_001329-box.txt  35_0077_000519-box.txt  6_0001_000121-box.txt  6_0001_000952-box.txt  6_0008_001625-box.txt  6_0008_002747-box.txt  6_0026_000077-box.txt  6_0030_000130-box.txt  6_0030_001027-box.txt  6_0046_000002-box.txt  6_0069_000681-box.txt  6_0087_000029-box.txt
src/: cascadeTest.cpp  detection.cpp  labelFinder.cpp  main.cpp  sift.cpp  utils.cpp
temp/: bow_vocabulary.yml  random_forest_bow_model.yml
